--- a/themes/ipsum-hugo/layouts/index.html
+++ b/themes/ipsum-hugo/layouts/index.html
@@ -5,9 +5,9 @@
       <div class="container">
         <div class="row align-items-center ftco-vh-100">
           <div class="col-md-7">
-            <h1 class="ftco-heading mb-3" data-aos="fade-up" data-aos-delay="500">We create awesome templates for you.</h1>
-            <h2 class="h5 ftco-subheading mb-5" data-aos="fade-up"  data-aos-delay="600">A free template for Business Websites by <a href="https://colorlib.com/" target="_blank">Colorlib</a> For busy business professionals Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-            <p data-aos="fade-up"  data-aos-delay="700"><a href="https://free-template.co/" target="_blank" class="btn btn-outline-white px-4 py-3" data-toggle="modal" data-target="#reservationModal">Go Get This Template</a></p>
+            <h1 class="ftco-heading mb-3" data-aos="fade-up" data-aos-delay="500">Crafting visually stunning memorable experiences for you.</h1>
+            <h2 class="h5 ftco-subheading mb-5" data-aos="fade-up"  data-aos-delay="600">We’re good. Just ask our moms.</h2>
+            <p data-aos="fade-up"  data-aos-delay="700"><a href="https://free-template.co/" target="_blank" class="btn btn-outline-white px-4 py-3" data-toggle="modal" data-target="#reservationModal">Find out more</a></p>
           </div>
         </div>
       </div>
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12  mb-5" data-aos="fade-up">
-            <h1 class="ftco-heading heading-thin mb-5">For busy business professionals &mdash; A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. </h1>
+            <h1 class="ftco-heading heading-thin mb-5">  With our expertise in small, large and multi-layered projects - from brand implementation to ongoing image management - we create fully managed solutions tailored to your exact needs. </h1>
           </div>
         </div>
         
@@ -29,16 +29,14 @@
     <section class="ftco-section-2">
       <div class="container-fluid">
         <div class="section-2-blocks-wrapper row no-gutters">
-          <div class="img col-sm-12 col-md-5" style="background-image: url('images/image_4.jpg');" data-aos="fade-right">
-            <a href="https://vimeo.com/45830194" class="button popup-vimeo" data-aos="fade-right" data-aos-delay="700"><span class="ion-ios-play"></span></a>
+          <div class="img col-sm-12 col-md-5" style="background-image: url('images/brand.svg');" data-aos="fade-right">
+            <!--<a href="https://vimeo.com/45830194" class="button popup-vimeo" data-aos="fade-right" data-aos-delay="700"><span class="ion-ios-play"></span></a>-->
           </div>
           <div class="text col-md-6 col-lg-7 d-flex">
             <div class="text-inner align-self-center" data-aos="fade-up">
               
-              <h3>Far far away, behind the word mountains</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+              <h3>We are brand guardians</h3>
+              <p>We have been working with design, architectural, marketing and branding agencies for decades. We understand what goes into a brand and the ongoing challenge to maintain its integrity.</p>
             </div>
           </div>
         </div>
@@ -47,21 +45,21 @@
 
     <section class="section-2-blocks-wrapper-2">
       <div class="container-fluid">
-        <div class="section-2-blocks-wrapper row no-gutters d-flex" style="background: #fafafa;">
+        <div class="section-2-blocks-wrapper row no-gutters d-flex">
           
           <div class="text col-md-5 col-lg-5 col-xl-4 ml-auto d-flex" data-aos="fade-up">
             <div class="text-inner align-self-center mr-auto">
-              <h4 class="text-primary h5">Far far away, behind the word mountains</h4>
-              <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-              <h4 class="text-primary h5">A small river named Duden flows by their place</h4>
-              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+              <h4 class="text-primary h5">Long-term partnerships</h4>
+              <p class="mb-4">Our list of clients and the length of our relationships with them show we deliver time and time again. We build trusted partnerships to achieve success.</p>
+              <h4 class="text-primary h5">Open & collaborative</h4>
+              <p class="mb-4">Solving problems is all about teamwork. We work closely with you to become part of your team. With that we rely on mutual trust and transparency.</p>
             </div>
           </div>
           <div class="img col-md-5 no-gutters ml-auto">
-            <div class="image" style="background-image: url('images/image_5.jpg'); " data-aos="fade-left"></div>
+            <div class="image" style="background-image: url('images/group.svg'); " data-aos="fade-left"></div>
             <div class="quote" data-aos="fade-left">
-              <p class="mb-5">&rdquo;A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. &ldquo;</p>
-              <p class="author">&mdash; Mellissa Clark</p>
+              <p class="mb-5">&rdquo; A year from now, you’ll wish you had started today. &ldquo;</p>
+              <p class="author">&mdash; Karen Lamb</p>
             </div>
           </div>
         </div>
@@ -171,27 +169,27 @@
       <div class="row">
         <div class="col-md-6 col-lg-4" data-aos="fade-up">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-bank bg-after"></span></div>
+            <div class="icon"><span class="flaticon-computer bg-after"></span></div>
             <div class="media-body">
-              <h3 class="heading">Creative Performance</h3>
+              <h3 class="heading">Web Development</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
             </div>
           </div>      
         </div>
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-career bg-after"></span></div>
+            <div class="icon"><span class="flaticon-flow-chart bg-after"></span></div>
             <div class="media-body">
-              <h3 class="heading">Reach Performance</h3>
+              <h3 class="heading">Content Development</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
             </div>
           </div>      
         </div>
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-lightbulb bg-after"></span></div>
+            <div class="icon"><span class="flaticon-presentation bg-after"></span></div>
             <div class="media-body">
-              <h3 class="heading">Custom Development</h3>
+              <h3 class="heading">Digital Marketing</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
             </div>
           </div>    
@@ -199,27 +197,27 @@
 
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-pie-chart bg-after"></span></div>
+            <div class="icon"><span class="flaticon-camera bg-after"></span></div>
             <div class="media-body">
-              <h3 class="heading">Creative Performance</h3>
+              <h3 class="heading">Photography</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
             </div>
           </div>      
         </div>
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-handshake bg-after"></span></div>
+            <div class="icon"><span class="flaticon-puzzle bg-after"></span></div>
             <div class="media-body">
-              <h3 class="heading">Reach Performance</h3>
+              <h3 class="heading">Graphic Design</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
             </div>
           </div>      
         </div>
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
           <div class="media block-6">
-            <div class="icon"><span class="flaticon-presentation bg-after"></span></div>
+            <div class="icon"><span class="flaticon-meeting bg-after"></span></div>
             <div class="media-body">
-              <h3 class="heading">Custom Development</h3>
+              <h3 class="heading">Community Management</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
             </div>
           </div>    
