--- a/themes/ipsum-hugo/layouts/partials/head.html
+++ b/themes/ipsum-hugo/layouts/partials/head.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar" data-aos="fade-down" data-aos-delay="500">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Papers</a>
+        <a class="navbar-brand" href="index.html">Ipsum Media</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
