--- a/themes/ipsum-hugo/static/css/flaticon.css
+++ b/themes/ipsum-hugo/static/css/flaticon.css
@@ -1,15 +1,15 @@
-	/*
-  	Flaticon icon font: Flaticon
-  	Creation date: 22/05/2018 03:49
-  	*/
+/*
+  Flaticon icon font: Flaticon
+  Creation date: 05/11/2018 19:18
+  */
 
 @font-face {
   font-family: "Flaticon";
   src: url("../fonts/flaticon/font/Flaticon.eot");
   src: url("../fonts/flaticon/font/Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("../fonts/flaticon/font/Flaticon.woff") format("woff"),
-       url("../fonts/flaticon/font/Flaticon.ttf") format("truetype"),
-       url("../fonts/flaticon/font/Flaticon.svg#Flaticon") format("svg");
+  url("../fonts/flaticon/font/Flaticon.woff") format("woff"),
+  url("../fonts/flaticon/font/Flaticon.ttf") format("truetype"),
+  url("../fonts/flaticon/font/Flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -17,30 +17,28 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "Flaticon";
-    src: url("../fonts/flaticon/font/Flaticon.svg#Flaticon") format("svg");
+    src: url("./Flaticon.svg#Flaticon") format("svg");
   }
 }
 
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
-[class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
+[class^="flaticon-"]:after, [class*=" flaticon-"]:after {
   font-family: Flaticon;
+  font-size: 20px;
   font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin-left: 20px;
 }
 
-.flaticon-bank:before { content: "\f100"; }
-.flaticon-dart:before { content: "\f101"; }
-.flaticon-career:before { content: "\f102"; }
-.flaticon-lightbulb:before { content: "\f103"; }
-.flaticon-pie-chart:before { content: "\f104"; }
-.flaticon-trophy:before { content: "\f105"; }
-.flaticon-money:before { content: "\f106"; }
-.flaticon-handshake:before { content: "\f107"; }
-.flaticon-presentation:before { content: "\f108"; }
+.flaticon-camera:before { content: "\f100"; }
+.flaticon-puzzle:before { content: "\f101"; }
+.flaticon-presentation:before { content: "\f102"; }
+.flaticon-presentation-1:before { content: "\f103"; }
+.flaticon-flow-chart:before { content: "\f104"; }
+.flaticon-globe:before { content: "\f105"; }
+.flaticon-pie-chart:before { content: "\f106"; }
+.flaticon-meeting:before { content: "\f107"; }
+.flaticon-lightbulb:before { content: "\f108"; }
+.flaticon-computer:before { content: "\f109"; }
+.flaticon-magazine:before { content: "\f10a"; }
+.flaticon-envelope:before { content: "\f10b"; }
+.flaticon-paper-plane:before { content: "\f10c"; }
