--- a/themes/ipsum-hugo/static/css/style.css
+++ b/themes/ipsum-hugo/static/css/style.css
@@ -7402,7 +7402,19 @@ h1, h2, h3, h4, h5,
 
 .bg-image, .ftco-cover {
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+}
+
+.bg-image, .ftco-cover:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(to bottom left, #002f4b, #dc4225);
+  opacity: .6;
+}
 
 .ftco-cover {
   background-position: center center; }
