--- a/themes/ipsum-hugo/layouts/partials/footer.html
+++ b/themes/ipsum-hugo/layouts/partials/footer.html
@@ -1,59 +1,19 @@
-<footer class="ftco-footer ftco-bg-dark ftco-section">
+<footer class="ftco-footer">
     <div class="container">
-        <div class="row mb-5">
-            <div class="col-md-8">
-                <div class="row">
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">The Restaurant</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="py-2 d-block">About Us</a></li>
-                                <li><a href="#" class="py-2 d-block">Chefs</a></li>
-                                <li><a href="#" class="py-2 d-block">Events</a></li>
-                                <li><a href="#" class="py-2 d-block">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Communities</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="py-2 d-block">Support</a></li>
-                                <li><a href="#" class="py-2 d-block">Sharing is Caring</a></li>
-                                <li><a href="#" class="py-2 d-block">Better Web</a></li>
-                                <li><a href="#" class="py-2 d-block">Good Template</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Useful links</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="py-2 d-block">Bootstrap 4</a></li>
-                                <li><a href="#" class="py-2 d-block">jQuery</a></li>
-                                <li><a href="#" class="py-2 d-block">HTML5</a></li>
-                                <li><a href="#" class="py-2 d-block">Sass</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+        <div class="row">
+            <div class="col-md-8 mt-3">
+                <p>
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> Ipsum Media
+                </p>
             </div>
             <div class="col-md-4">
-                <div class="ftco-footer-widget mb-4">
+                <div class="ftco-footer-widget">
                     <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
                         <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                         <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
                         <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-
-                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
         </div>
     </div>
