--- a/themes/ipsum-hugo/layouts/index.html
+++ b/themes/ipsum-hugo/layouts/index.html
@@ -7,7 +7,7 @@
           <div class="col-md-7">
             <h1 class="ftco-heading mb-3" data-aos="fade-up" data-aos-delay="500">Crafting visually stunning memorable experiences for you.</h1>
             <h2 class="h5 ftco-subheading mb-5" data-aos="fade-up"  data-aos-delay="600">We’re good. Just ask our moms.</h2>
-            <p data-aos="fade-up"  data-aos-delay="700"><a href="https://free-template.co/" target="_blank" class="btn btn-outline-white px-4 py-3" data-toggle="modal" data-target="#reservationModal">Find out more</a></p>
+            <p data-aos="fade-up"  data-aos-delay="700"><a href="/contact" class="btn btn-outline-white px-4 py-3">Contact Us</a></p>
           </div>
         </div>
       </div>
@@ -29,7 +29,7 @@
     <section class="ftco-section-2">
       <div class="container-fluid">
         <div class="section-2-blocks-wrapper row no-gutters">
-          <div class="img col-sm-12 col-md-5" style="background-image: url('images/brand.svg');" data-aos="fade-right">
+          <div class="img col-sm-12 col-md-5" style="background-image: url('images/1.jpg');" data-aos="fade-right">
             <!--<a href="https://vimeo.com/45830194" class="button popup-vimeo" data-aos="fade-right" data-aos-delay="700"><span class="ion-ios-play"></span></a>-->
           </div>
           <div class="text col-md-6 col-lg-7 d-flex">
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="img col-md-5 no-gutters ml-auto">
-            <div class="image" style="background-image: url('images/group.svg'); " data-aos="fade-left"></div>
+            <div class="image" style="background-image: url('images/2.jpg'); " data-aos="fade-left"></div>
             <div class="quote" data-aos="fade-left">
               <p class="mb-5">&rdquo; A year from now, you’ll wish you had started today. &ldquo;</p>
               <p class="author">&mdash; Karen Lamb</p>
