--- a/themes/ipsum-hugo/layouts/partials/head.html
+++ b/themes/ipsum-hugo/layouts/partials/head.html
@@ -2,17 +2,18 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar" data-aos="fade-down" data-aos-delay="500">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Ipsum Media</a>
+        <a class="navbar-brand" href="/">Ipsum Media</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
 
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="services.html" class="nav-link">What We Do</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link">Who We Are</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="/about" class="nav-link">Who We Are</a></li>
+                <li class="nav-item"><a href="/services" class="nav-link">What We Do</a></li>
+                <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+                <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
             </ul>
         </div>
     </div>
