add services content

--- a/themes/ipsum-hugo/layouts/index.html
+++ b/themes/ipsum-hugo/layouts/index.html
@@ -28,7 +28,7 @@
           <div class="icon"><span class="flaticon-computer bg-after"></span></div>
           <div class="media-body">
             <h3 class="heading">Web Development</h3>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+            <p>We design, redesign, develop and manage websites from ground up to maximize delivery.</p>
           </div>
         </div>
       </div>
@@ -37,7 +37,7 @@
           <div class="icon"><span class="flaticon-flow-chart bg-after"></span></div>
           <div class="media-body">
             <h3 class="heading">Content Development</h3>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+            <p>We develop content for social media platforms that is copies based on content pillars.</p>
           </div>
         </div>
       </div>
@@ -46,7 +46,7 @@
           <div class="icon"><span class="flaticon-presentation bg-after"></span></div>
           <div class="media-body">
             <h3 class="heading">Digital Marketing</h3>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+            <p>It involves Content Optimization, Content Curation, SEM, SMM etc</p>
           </div>
         </div>
       </div>
@@ -56,7 +56,7 @@
           <div class="icon"><span class="flaticon-camera bg-after"></span></div>
           <div class="media-body">
             <h3 class="heading">Photography</h3>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+            <p>Mainly done for content development or event coverage.</p>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
           <div class="icon"><span class="flaticon-puzzle bg-after"></span></div>
           <div class="media-body">
             <h3 class="heading">Graphic Design</h3>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+            <p>Ideal for brand Identity and and Ideal Marketing.</p>
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
           <div class="icon"><span class="flaticon-meeting bg-after"></span></div>
           <div class="media-body">
             <h3 class="heading">Community Management</h3>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+            <p>We offer services such as Digital strategies, Social media campaigns & Facebook analytics.</p>
           </div>
         </div>
       </div>
