--- a/themes/ipsum-hugo/layouts/partials/head.html
+++ b/themes/ipsum-hugo/layouts/partials/head.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar" data-aos="fade-down" data-aos-delay="500">
     <div class="container">
         <a class="navbar-brand" href="/">
-            <img src="images/logo.png" alt="logo" width="150">
+            <img src="/images/logo.png" alt="logo" width="150">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
@@ -14,7 +14,7 @@
                 <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="/about" class="nav-link">Who We Are</a></li>
                 <li class="nav-item"><a href="/services" class="nav-link">What We Do</a></li>
-                <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+                <li class="nav-item"><a href="/posts" class="nav-link">Blog</a></li>
                 <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
             </ul>
         </div>
