--- a/themes/ipsum-hugo/layouts/about/about.html
+++ b/themes/ipsum-hugo/layouts/about/about.html
@@ -27,7 +27,7 @@
                         <div class="icon"><span class="flaticon-lightbulb bg-after"></span></div>
                         <div class="media-body">
                             <h3 class="heading">Our Vision</h3>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                            <p>To be a leading center in creativity, interactions and brand identity.</p>
                         </div>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                         <div class="icon"><span class="flaticon-presentation-1 bg-after"></span></div>
                         <div class="media-body">
                             <h3 class="heading">Our Mission</h3>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                            <p>To provide affordable Digital Marketing services to help keep your business at the top of mind and deliver on your brand promise.</p>
                         </div>
                     </div>
                 </div>
