--- a/themes/ipsum-hugo/layouts/partials/head.html
+++ b/themes/ipsum-hugo/layouts/partials/head.html
@@ -20,9 +20,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Pages</a></li>
+                <li class="nav-item"><a class="nav-link" href="/shop">Shop</a></li>
                 <li class="nav-item"><a  href="static.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
             </ul>
             <!--<ul class="navbar-nav justify-content-end">-->
