--- a/themes/ipsum-hugo/layouts/shop/shop.html
+++ b/themes/ipsum-hugo/layouts/shop/shop.html
@@ -1,4 +1,54 @@
 {{ partial "header.html" . }}
 {{ partial "head.html" . }}
-<h1>shop here</h1>
+<!--================Banner Area =================-->
+<section class="shop_banner_area banner_area">
+    <div class="container">
+        <div class="banner_text_inner">
+            <h4>Products we make will appear here</h4>
+            <!--<h5>Tell us about your story and your project.</h5>-->
+        </div>
+    </div>
+</section>
+<!--================End Banner Area =================-->
+
+<!--================Latest News Area =================-->
+<section class="latest_news_area p_100">
+    <div class="container">
+        <div class="l_news_inner">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="l_news_item">
+                        <div class="l_news_img"><a href="#"><img class="img-fluid" src="https://i-h1.pinimg.com/564x/43/52/38/435238bda60f82e66fc354f6174ebc04.jpg" alt=""></a></div>
+                        <div class="l_news_content">
+                            <h4>Painted Bulb Tee</h4>
+                            <p>Ksh. 700</p>
+                            <a class="more_btn" href="#">Order</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="l_news_item">
+                        <div class="l_news_img"><a href="#"><img class="img-fluid" src="https://i-h1.pinimg.com/564x/29/19/d8/2919d8c4065e400c4212a60fedc181d5.jpg" alt=""></a></div>
+                        <div class="l_news_content">
+                            <h4>King & Queen Tee</h4>
+                            <p>Ksh. 1500 (pair)</p>
+                            <a class="more_btn" href="#">Order</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="l_news_item">
+                        <div class="l_news_img"><a href="#"><img class="img-fluid" src="https://i-h1.pinimg.com/564x/7a/20/ae/7a20aec3932c94bd20260dc0a7fe7e42.jpg" alt=""></a></div>
+                        <div class="l_news_content">
+                            <a href="#"><h4>Math Tee</h4></a>
+                            <p>Ksh. 900</p>
+                            <a class="more_btn" href="#">Order</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--================End Latest News Area =================-->
 {{ partial "footer.html" . }}
