--- a/themes/ipsum-hugo/layouts/shop/shop.html
+++ b/themes/ipsum-hugo/layouts/shop/shop.html
@@ -11,7 +11,7 @@
 </section>
 <!--================End Banner Area =================-->
 
-<!--================Latest News Area =================-->
+<!--================Shop Area =================-->
 <section class="latest_news_area p_100">
     <div class="container">
         <div class="l_news_inner">
@@ -50,5 +50,5 @@
         </div>
     </div>
 </section>
-<!--================End Latest News Area =================-->
+<!--================End Shop Area =================-->
 {{ partial "footer.html" . }}
