--- a/themes/ipsum-hugo/layouts/partials/head.html
+++ b/themes/ipsum-hugo/layouts/partials/head.html
@@ -21,7 +21,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/shop">Shop</a></li>
-                <li class="nav-item"><a  href="static.html">Blog</a></li>
+                <li class="nav-item"><a  href="/posts">Blog</a></li>
                 <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
             </ul>
             <!--<ul class="navbar-nav justify-content-end">-->
